# writing_an_os_in_rust

v1/: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
v1/.cargo/: config.toml
v1/arch/: grub.cfg
v1/arch/x86_64/: boot.asm  long_mode_start.asm
v1/src/: asm.rs  entry.rs  idt.rs  instructions.rs  interrupts.rs  lib.rs  pic.rs  port.rs  vga_buffer.rs  virt_addr.rs
v1/src/interrupts/: gdt.rs  mod.rs
v1/src/memory/: area_frame_allocator.rs  heap_allocator.rs  locked.rs  mod.rs  stack_allocator.rs
v1/src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  table_entry.rs  temporary_page.rs
v1/src/multiboot/: boot_loader_name.rs  command_line.rs  efi.rs  elf_sections.rs  end.rs  framebuffer.rs  image_load_addr.rs  memory_map.rs  mod.rs  module.rs  rsdp.rs  smbios.rs  tag.rs  tag_trait.rs  tag_type.rs  vbe_info.rs
v1/src/multiboot/main/: boot_loader_name.rs  command_line.rs  efi.rs  end.rs  memory_map.rs  mod.rs  smbios.rs  tag_trait.rs  vbe_info.rs
v1/src/structures/: gdt.rs  idt.rs  mod.rs  tss.rs
v1/src/xxx/: addr.rs  mod.rs
v1/src/xxx/instructions/: interrupts.rs  mod.rs  port.rs  segmentation.rs  tables.rs  tlb.rs
v1/src/xxx/registers/: control.rs  debug.rs  mod.rs  model_specific.rs  mxcsr.rs  rflags.rs  segmentation.rs
v1/src/xxx/structures/: gdt.rs  idt.rs  mod.rs  tss.rs
v1/src/xxx/structures/paging/: frame.rs  frame_alloc.rs  mod.rs  page.rs  page_table.rs
v1/src/xxx/structures/paging/mapper/: mapped_page_table.rs  mod.rs  offset_page_table.rs  recursive_page_table.rs
v1_32/: .gitignore  README.md
v1_64/: README.md
(+35 files in other folders)
