[package]
name = "blog_v1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.10.2"
bitflags = "2.5.0"
multiboot2 = { version = "0.20.2", default-features = false }
spin = "0.9.8"
volatile = { version = "0.3.0", default-features = false }    # TODO: 0.6.1
x86_64 = "0.15.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
