[package]
name = "blog_v1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.10.2"
bitflags = "2.5.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
volatile = { version = "0.3.0", default-features = false }
x86_64 = "0.15.1"
derive_more = { version = "~0.99", default-features = false, features = [
    "display",
] }
log = { version = "~0.4", default-features = false }
uefi-raw = { version = "~0.5", default-features = false }
ptr_meta = { version = "~0.2", default-features = false }
